# Zbin

./: .gitignore  README.md  zdb.bt
Assets/FastZBin/: LZFile.cs  Test.cs  ZFile.cs
Assets/Scenes/: SampleScene.unity
ZCPP/: buff.csv.zbin
ZCPP/libz/: .gitignore  220_build_cmake.bat  CMakeLists.txt  lzfile.cpp  lzfile.h  main.cpp  readme.md  zfile.cpp  zfile.h
ZCPP/libz/lz4/: CMakeLists.txt
